# BRIO_x_Alkemy

./: .gitignore  Dockerfile  Makefile  README.md  RiskMeasure_implementation.ipynb  pyproject.toml  requirements.txt  setup.cfg  test.py  test_bias_detector.py
.circleci/: config.yml
BEWARE_2024/: HazardFromBiasDetectionCalculator.py  README.md
frontend/: app.py  vars.txt  vars_freq.txt
notebooks/: (for_debug)_testing_distances.ipynb  01_2_WeakModels_1.ipynb  01_2_WeakModels_2.ipynb  01_ModelCreation.ipynb  02_BiasDetection + UX simple workflow-new_thresholds.ipynb  02_BiasDetection + UX simple workflow.ipynb  02_BiasDetection + UX simple workflow_old.ipynb  02_BiasDetection_+_UX_simple_workflow.ipynb  02b_BiasDetection + UX simple workflow probabilities.ipynb  03_BiasDetection_KL_Divergence.ipynb  03_new_data_preparation.ipynb  04_new_data_preparation.ipynb  05_BiasDetection_with_weaker_models.ipynb  Analysis_of_threshold_calculator.ipynb  BiasDetection.ipynb  Experiments_1_freqVsFreq.ipynb  Experiments_2_BiasDetection_with_weaker_models.ipynb  Experiments_3_Analysis_of_threshold_calculator.ipynb  FirstExperiment.ipynb  Model_Creation.ipynb  RiskMeasure_experiments_2_WIP.ipynb  RiskMeasure_experiments_3.ipynb  RiskMeasure_experiments_4.ipynb  RiskMeasure_implementation.ipynb  RiskMeasure_implementation_and_experiments.ipynb  data_for_demo.csv  data_for_demo_with_predictions.csv  mlflow.db  test_divergences_with_probabilities.ipynb  testing_distances.ipynb  tptnd.ipynb
notes on risk/: main.aux  main.bbl  main.blg  main.tex  main.toc  temp.bib
paper/: .gitignore  (+8 more)
(+81 files in other folders)
