[metadata]
name = brio
version = file: VERSION.txt
keywords = brio
description = Brio
author = DLBDDepartment@alkemy.com
url = https://github.com/DLBD-Department/BRIO_x_Alkemy/
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Bug Tracker = https://github.com/DLBD-Department/BRIO_x_Alkemy/issues
    Source Code = https://github.com/DLBD-Department/BRIO_x_Alkemy

[options]
zip_safe = True
include_package_data = True
python_requires = >=3.10
packages = find:

[options.packages.find]
include = brio*
exclude =
    ez_setup
    examples
    tests

[options.extras_require]
test = pytest

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 132
extend-ignore =
    E203
    E401
    W504
    E221
